<resources>
    <string name="app_name">Prueba MARKETMIX</string>
    <string name="Welcome">Bienvenido</string>
    <string name="Wait">Por Favor Espere que se carguen los elementos del carrito</string>
    <string name="title">Prueba Carrito de Andrés</string>
    <string name="titleM">Lista de los Asteroids</string>
    <string name="titleShoping">Carrito de Asteroids</string>
    <string name="titleApi">Consulta de Asteroids</string>

    <string name="home">Home</string>
    <string name="search">Buscar API</string>
    <string name="carrito">Carrito</string>

    <string name="titleMainActivity">Este es el carrito de los asteroides avistados en el año de nacimiento de Andrés.</string>
    <string name="titleServicioExplecitoActivity">Aquí podrá listar todos los objetos cercanos al planeta tierra durante el año y el mes que usted desee utilizando un servicio de la NASA.</string>
    <string name="firstYear">Indique el año a observar</string>
    <string name="endYear">Indique el mes del año a observar</string>
    <string name="Consultar">Consultar</string>
    <string name="Comprar">Comprar</string>


    <string name="asteroidName">Nombre del asteroide:</string>
    <string name="asteroidDiameter">Diametro del Asteroide: </string>
    <string name="asteroidMagnitude">Magnitud del Asteroide: </string>
    <string name="titleShopingActivity">Puede ver los Asteroides que agregó a su carrito de Compras</string>

    <string name="count">0.0</string>
    <string name="pay">Total a Pagar: </string>

</resources>
