<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround">

    <com.iammert.library.readablebottombar.ReadableBottomBar
        android:id="@+id/ReadableBottomBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:rbb_indicatorHeight="7dp"
        app:rbb_indicatorColor="@color/colorGradientStart"
        app:rbb_initialIndex="2"
        app:rbb_tabs="@xml/tabs"/>

    <RelativeLayout
        android:id="@+id/ReLayShopingCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ReadableBottomBar">


            <ImageView
                android:id="@+id/ImgViewCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_shopping_basket_black_24">

            </ImageView>

            <TextView
                android:id="@+id/textViewCountAsteroids"
                android:layout_width="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@id/ImgViewCar"
                android:text="@string/count">

            </TextView>



        <TextView
            android:id="@+id/textViewTitleShoping"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="25dp"
            android:layout_below="@+id/textViewCountAsteroids"
            android:text="@string/titleShopingActivity"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="22dp"
            android:textAlignment="center"
            android:textStyle="bold">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/peSLRecyclerViewShopingCard"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textViewTitleShoping"
            tools:ignore="NotSibling"
            android:nestedScrollingEnabled = "true"/>

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/peSLRecyclerViewShopingCard"
            android:text="@string/pay">

        </TextView>

        <TextView
            android:id="@+id/textViewTotalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_below="@+id/peSLRecyclerViewShopingCard"
            android:text="@string/count">

        </TextView>

    </RelativeLayout>

</RelativeLayout>